infrastructure/controllers/k8sgpt-operator/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: k8sgpt-operator-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
