infrastructure/controllers/k8sgpt-operator/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: k8sgpt-grpc-route
  namespace: k8sgpt-operator-system
spec:
  parentRefs:
  - name: eg-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "k8sgpt.${domain_name}"
  rules:
    - backendRefs:
        - name: k8sgpt-app
          port: 8080
